--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
  # build output
-dist/
+eminent-escape/dist/
 
 # generated types
-.astro/
+eminent-escape/.astro/
 
 # dependencies
-node_modules/
+eminent-escape/node_modules/
 
 # logs
 npm-debug.log*
@@ -21,5 +21,5 @@ pnpm-debug.log*
 .DS_Store
 
 # jetbrains setting folder
-.idea/
+eminent-escape/.idea/
 
