--- a/eminent-escape/.gitignore
+++ b/eminent-escape/.gitignore
@@ -1,11 +1,11 @@
- # build output
-eminent-escape/dist/
+# build output
+dist/
 
 # generated types
-eminent-escape/.astro/
+.astro/
 
 # dependencies
-eminent-escape/node_modules/
+node_modules/
 
 # logs
 npm-debug.log*
@@ -21,9 +21,4 @@ pnpm-debug.log*
 .DS_Store
 
 # jetbrains setting folder
-eminent-escape/.idea/
-
-# detectar cambios en carpeta de desarrollo
-!eminent-escape/
-!eminent-escape/*
-
+.idea/
