Ya se termino y funciona bien, hay que poner bonito el codigo

--- a/backend/mail_whatsapp_send/src/main/resources/application.properties
+++ b/backend/mail_whatsapp_send/src/main/resources/application.properties
@@ -2,11 +2,24 @@
 server.port=1609
 spring.application.name=mail_whatsapp_send
 
-# ...existing code...
 spring.datasource.url=jdbc:postgresql://localhost:5432/mail_whatsapp_send
 spring.datasource.username=admin
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Propiedad para resetear la base de datos
-#spring.jpa.hibernate.ddl-auto=create-drop
-# ...existing code...
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Configuración para MailHog (SMTP local) si se va configurar gmail aqui se tiene que hacer
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+send.mail.subject=Correo enviado desde el formulario de contacto
+send.mail.mail=micorreo@mail.com
+
+# Configuracion para mandar mensajes de whatsapp
+evolution.api.endpoint.ip=http://localhost:8080
+evolution.api.endpoint.uri=/message/sendText/formulario_contacto
+evolution.api.endpoint.key=1234
