--- a/backend/mail_whatsapp_send/docker-compose.yml
+++ b/backend/mail_whatsapp_send/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   db:
     image: postgres:16
@@ -10,7 +9,49 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/home/luisgmm/Documentos/Proyectos/web_gerardomarquez_dev/backend/mail_whatsapp_send/src/volume
+      - .volumes/postgres_db_mail_whatsapp_send:/var/lib/postgresql/data
 
+  mailhog:
+    image: mailhog/mailhog
+    container_name: mailhog_mail_whatsapp_send
+    ports:
+      - "1025:1025"   # SMTP
+      - "8025:8025"   # Web UI
+
+  postgres:
+    image: postgres:15
+    container_name: postgres_db_evolution_api
+    restart: always
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: 1234
+      POSTGRES_DB: evolution_api_db
+    ports:
+      - "5433:5432"
+    volumes:
+      - .volumes/postgres_db_evolution_api:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7
+    container_name: evolution_redis
+    restart: always
+    ports:
+      - "6379:6379"
+
+  evolution-api:
+    container_name: evolution_api
+    image: atendai/evolution-api:v2.1.1
+    restart: always
+    ports:
+      - "8080:8080"
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - .volumes/evolution_api:/evolution/instances
 volumes:
   pgdata:
+  postgres_data:
+  evolution_instances:
