--- a/backend/mail_whatsapp_send/src/main/resources/application.properties
+++ b/backend/mail_whatsapp_send/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Puerto de prueba
 server.port=1609
 spring.application.name=mail_whatsapp_send
+spring.messages.basename=messages
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/mail_whatsapp_send
 spring.datasource.username=admin
