Ya esta quedando

--- a/backend/mail_whatsapp_send/src/main/resources/application.properties
+++ b/backend/mail_whatsapp_send/src/main/resources/application.properties
@@ -22,5 +22,8 @@ send.mail.mail=micorreo@mail.com
 
 # Configuracion para mandar mensajes de whatsapp
 evolution.api.endpoint.ip=http://localhost:8080
-evolution.api.endpoint.uri=/message/sendText/formulario_contacto
+evolution.api.endpoint.uri=/message/sendText/contact_form
 evolution.api.endpoint.key=1234
+evolution.api.endpoint.key.header=apikey
+evolution.api.message=\u00A1Nuevo mensaje desde tu p\u00E1gina de contacto!\n\nNombre: %s\nCorreo electr\u00F3nico: %s\nMensaje:\n%s
+evolution.api.send.phone.number=52155
