Ya quedo, sigamos con el front end

--- a/backend/mail_whatsapp_send/src/main/resources/application.properties
+++ b/backend/mail_whatsapp_send/src/main/resources/application.properties
@@ -2,7 +2,14 @@
 server.port=1609
 spring.application.name=mail_whatsapp_send
 spring.messages.basename=messages
+spring.config.encoding=UTF-8
 
+#Configuracion de filtro (Rate Limit)
+rate.limit.capacity=3
+rate.limit.refill.capacity=1
+rate.limit.refill.minutes=10
+
+#Configuracion de base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/mail_whatsapp_send
 spring.datasource.username=admin
 spring.datasource.password=1234
@@ -19,11 +26,12 @@ spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 send.mail.subject=Correo enviado desde el formulario de contacto
 send.mail.mail=micorreo@mail.com
+send.mail.template=\u00A1Nuevo mensaje desde tu p\u00E1gina de contacto!\n\nNombre: %s\n\nCorreo electr\u00F3nico: %s\n\nMensaje:\n%s
 
 # Configuracion para mandar mensajes de whatsapp
 evolution.api.endpoint.ip=http://localhost:8080
 evolution.api.endpoint.uri=/message/sendText/contact_form
 evolution.api.endpoint.key=1234
 evolution.api.endpoint.key.header=apikey
-evolution.api.message=\u00A1Nuevo mensaje desde tu p\u00E1gina de contacto!\n\nNombre: %s\nCorreo electr\u00F3nico: %s\nMensaje:\n%s
+evolution.api.message=\u00A1Nuevo mensaje desde tu p\u00E1gina de contacto!\n\nNombre: %s\n\nCorreo electr\u00F3nico: %s\n\nMensaje:\n%s
 evolution.api.send.phone.number=52155
