--- a/backend/mail_whatsapp_send/build.gradle
+++ b/backend/mail_whatsapp_send/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation("org.springframework.boot:spring-boot-starter-validation")
 	implementation 'org.postgresql:postgresql:42.7.3'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	// https://mvnrepository.com/artifact/com.github.vladimir-bukhtoyarov/bucket4j-core
