--- a/eminent-escape/package.json
+++ b/eminent-escape/package.json
@@ -9,10 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^8.2.3",
-    "astro": "^5.9.2"
+    "@astrojs/vercel": "^8.2.3"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^6.0.2"
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.12.1"
   }
 }
