Se cambian las variables por variables de entorno

--- a/backend/mail_whatsapp_send/src/main/resources/application.properties
+++ b/backend/mail_whatsapp_send/src/main/resources/application.properties
@@ -10,28 +10,30 @@ rate.limit.refill.capacity=1
 rate.limit.refill.minutes=1
 
 #Configuracion de base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/mail_whatsapp_send
-spring.datasource.username=admin
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Propiedad para resetear la base de datos
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # Configuración para MailHog (SMTP local) si se va configurar gmail aqui se tiene que hacer
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${GMAIL_USER}
+spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 send.mail.subject=Correo enviado desde el formulario de contacto
-send.mail.mail=micorreo@mail.com
+send.mail.mail=${MAIL_RECEIVER}
 send.mail.template=\u00A1Nuevo mensaje desde tu p\u00E1gina de contacto!\n\nNombre: %s\n\nCorreo electr\u00F3nico: %s\n\nMensaje:\n%s
 
 # Configuracion para mandar mensajes de whatsapp
-evolution.api.endpoint.ip=http://localhost:8080
-evolution.api.endpoint.uri=/message/sendText/dil_pickles
-evolution.api.endpoint.key=1234
-evolution.api.endpoint.key.header=apikey
+evolution.api.endpoint.ip=${EVOLUTION_API_IP}
+evolution.api.endpoint.uri=${EVOLUTION_API_URI}
+evolution.api.endpoint.key=${EVOLUTION_API_KEY}
+evolution.api.endpoint.key.header=${EVOLUTION_API_KEY_HEADER}
 evolution.api.message=\u00A1Nuevo mensaje desde tu p\u00E1gina de contacto!\n\nNombre: %s\n\nCorreo electr\u00F3nico: %s\n\nMensaje:\n%s
-evolution.api.send.phone.number=52155
+evolution.api.send.phone.number=${EVOLUTION_API_RECEIVER_PHONE_NUMBER}
